# med-collab-system

./: .dockerignore  .env.docker  .gitignore  AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  package-lock.json  package.json  settings.gradle.kts
segmentation-service/: .env.example  .gitignore  README.md  pyproject.toml
segmentation-service/app/: __init__.py  main.py
segmentation-service/app/adapters/: __init__.py
segmentation-service/app/adapters/http/: __init__.py
segmentation-service/app/adapters/metric_service/: __init__.py
segmentation-service/app/api/: __init__.py  router.py
segmentation-service/app/api/dependencies/: services.py
segmentation-service/app/api/routes/: __init__.py  health.py  models.py  segmentation.py
segmentation-service/app/core/config/: __init__.py  settings.py
segmentation-service/app/domain/: __init__.py
segmentation-service/app/inference/: __init__.py
segmentation-service/app/postprocessing/: __init__.py  assembler.py  mask_ops.py
segmentation-service/app/preprocessing/: __init__.py  image_loader.py  image_preprocessor.py  normalizer.py
segmentation-service/app/schemas/: __init__.py
segmentation-service/app/services/: __init__.py
segmentation-service/app/utils/: ids.py
segmentation-service/configs/local/: app.toml
segmentation-service/configs/test/: app.toml
segmentation-service/scripts/: run-dev.sh
segmentation-service/tests/integration/: test_app_routes.py
segmentation-service/tests/unit/: test_mask_ops.py  test_torch_unet_engine.py  test_unet_model.py
(+225 files in other folders)
