[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "segmentation-service"
version = "0.1.0"
description = "Bootstrap FastAPI service for medical image segmentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "numpy>=2.0.0,<3.0.0",
  "pillow>=11.0.0,<12.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<0.29.0",
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.11.0,<0.12.0",
]
unet = [
  "torch>=2.4.0,<3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
